<resources>
    <string name="app_name">Stickman</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="str_depth">Applied Math Department</string>
	<string name="str_university">St.Petersburg Polytechnical University</string>
    <string name="str_toweb">To web site</string>
    <string name="str_start">Start</string>
    <string name="str_load">Load</string>
    <string name="str_save">Save</string>
    <string name="str_help">Help</string>
    <string name="str_new_anim">New animation</string>
    <string name="choose_language">Choose language</string>
    <string name="str_anim_fps">Animation frames per second:</string>
    <string name="str_lang_spinner">Language:</string>
    <string name="current_fps_text">Current FPS:  </string>
    <string name="settings_header">Settings</string>
    <string name="file_saved_to">Animation was saved to file </string>
    <string name="file_opened_from">Animation was loaded from file </string>
    <string name="max_number_of_objects">Max number of objects in frame (too much objects on frame can cause a performance hit)</string>
    <string name="save_or_not">Save animation automatically before exit</string>
    <string name="enable_interpolation">Enable interpolation between frames</string>
    <string name="loop_animation">Play animation in a loop</string>
    <string name="show_hints">Show popup hints</string>
    <string name="save_before_new">Do you want to save current animation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_anim">Open File:</string>
    <string name="save_anim">Save As:</string>
    <string name="folder_select">Folder Select:</string>
    <string name="new_folder">New Folder</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_folder_name">New folder name</string>
    <string name="failed_to_create">Failed to create folder</string>
    <string name="toast_help1">You can change settings, load and save animations, or find help in game menu.</string>
    <string name="toast_help2">Press this button to start or stop playing animation.</string>
    <string name="toast_help3">You have pressed drag mode button. Now you can drag objects.</string>
    <string name="toast_help4">You have touched the canvas in a draw mode. Now you can draw objects. </string>
    <string name="toast_help5">You have touched the primitive for rotating. Green blinking joint indicates rotation centre.</string>
    <string name="toast_help6">Press this button to delete current frame.</string>
    <string name="toast_help7">You have touched parent object of hierarchy. While holding your finger on the screen, you can drag the object and all it\'s children.</string>
    <string name="toast_help8">You have pressed drag mode button/ Now you can draw objects in current frame.</string>
    <string name="toast_help9">Press this button to add new frame to animation.</string>
    <string name="toast_help10">Press this button to switch to next frame.</string>
    <string name="toast_help11">Press this button to switch to previous frame.</string>
    <string name="toast_help12">You have touched child primitive for dragging. If you drag it rather fast, you will tear it from parent and make it independent</string>
    <string name="toast_help13">You have double clicked the object\'s joint. Now you can scale it.</string>
    <string name="toast_help14">You have double clicked the object\'s joint. Now this joint became rotation centre for the hierarchy and it\'s object became root the hierarchy.</string>
    <string name="toast_help15">You have double clicked the object\'s line. Now this primitive became root of it\'s hierarchy.</string>
    <string name="toast_help16">The object you are dragging is partly out of bounds. If you drop it now, it will be removed from current frame and all next frames.</string>
    <string name="toast_help17">Self-intersected lines gives circle, all other lines give sticks.</string>
    <string name="toast_help18">To turn off popup hints, select appropriate tick in settings menu.</string>
    <string name="toast_help19">To open menu, press leftmost button above (the one with three stripes).</string>
    <string name="how1"><u>What is this app about?</u></string>
    <string name="how2"><u>How do I draw objects?</u></string>
    <string name="how3"><u>How do I move objects?</u></string>
    <string name="how4"><u>How do I connect objects?</u></string>
    <string name="how5"><u>How do I control frames?</u></string>
    <string name="how6"><u>How do I watch animation?</u></string>
    <string name="how7"><u>How do I save and \n load results?</u></string>
    <string name="ans1">About app</string>
    <string name="ans2">Drawing objects</string>
    <string name="ans3">Moving objects</string>
    <string name="ans4">Connecting objects</string>
    <string name="ans6">Watching animation</string>
    <string name="ans7">Saving results</string>
    <string name="about1">Stickman application will help you easily create simple animations, like those that almost everyone 
        tried to draw in her notebook. Besides drawing, you can save your animation for future usage and watch it whenever you want.</string>
    <string name="about2">You can ask questions to developers, report about a problem or consider suggestions about application improvement, writing at \n <center><i><b>e-mail:</b> andy.silv@yandex.ru</i></center></string>
    <string name="draw1">To draw an object, first choose drawing mode by clicking this button in top menu. Not more than
        15 objects can be drawn on a single frame.</string>
    <string name="draw2">You can draw two types of objects: sticks and circles, like on the picture below:</string>
    <string name="draw3">Now you can touch the screen in arbitrary point inside the drawing field (black box, bounding almost all the screen) and drag your finger
        to another arbitrary point on the screen. You will see a red and gray lines appearing: red line indicates result primitive, which will be drawn
        if you pull off your finger. Gray line indicates current path of your finger. If your path has self-intersections,
        a circle will be drawn, else you will get stick. Below you an see an example of what you can see while drawing an object.</string>
    <string name="draw4">Notice, that all the objects you have drawn on the current frame, will appear on all frames after the current one.</string>
    <string name="move1">To move objects, first choose moving mode by clicking this button in top menu.</string>
    <string name="move2">You can move objects in two different ways: drag or rotate them. Also, you can scale objects (see below).</string>
    <string name="move3">To drag an object, touch it\'s black part (not joint, but line) and drag wherever you want. When touched for dragging,
        objects\'s line colour turns to violet.</string>
    <string name="move4">To rotate an object, touch it\'s joint and move your finger over the screen. When touched for rotating, objects\'s 
        joint colour turns to violet. Rotation is performed around green blinking joint (it will appear when any joint is touched). Usually it is the green joint of
        the hierarchy, but if you try to rotate object touching the green joint itself, the rotation will be performed around parent object\'s centre.</string>
    <string name="move5">To scale an object, quickly tap twice any of it\'s joints, and then drag. When touched for scaling, object\'s 
        joint colour turns to blue.</string>
    <string name="move6">To remove object from the frame, simply move it so that any of it\'s points gets out of drawing field. After that object will turn to red,
        and if you pull of your finger, it will be removed from the screen.</string>
    <string name="connect1">To connect objects, first choose moving mode by clicking this button in top menu.</string>
    <string name="connect2">Connected objects form a hierarchy: attached object becomes a child of object, to which it is attached 
        (the latter object becomes parent for the former).</string>
    <string name="connect3">
        We call object\'s joint a <i>root joint</i>, if touching any other joint in hierarchy causes rotation around this one. Such joint has a green colour and it is always unique and present in any hierarchy.
        Root joint always belongs to a parent of the hierarchy.
        We call object\'s joint a <i>free joint</i>, if it\'s not connected with any other joint. free joints (except maybe a root joint) have yellow colour. 
        We call object\'s joint a <i>connected joint</i>, if it\'s connected with some other joint. Connected joints have orange colour.</string>
    <string name="connect4">Key thing is that you can only attach parent objects. To attach one object (parent object!) to any other object, move first object so that one of it\'s free joints
        overlaps with some joint of second object. After connection, the object you moved becomes child of an object, that was stationary. Note, that object cannot be attached
        to any of it\'s direct or indirect children.</string>
    <string name="connect8">You can turn any object in hierarchy into parent of this hierarchy by quickly tapping twice on one of it\'s joints or on it\'s line. 
        Note that tapping twice on joint also turns it into new rotation centre of hierarchy.</string>
    <string name="connect5">When parent object is moved, all it\'s children are also moved. On the other hand, you can\'t drag child object explicitly,
        you can rather rotate it around connection joint or disconnect it from parent by dragging it rather fast.</string>
    <string name="connect6">Note, that you can scale object, only if it\'s absolutely free, i.e. is not a parent nor a child.</string>
    <string name="connect7">As mentioned above, to disconnect objects, quickly pull child object away from parent.</string>
    <string name="frames1">There are four buttons in top menu to control frames (the third is <i>New frame</i> button, and the right most is <i>Delete</i> button).</string>
    <string name="frames2">Left and right arrows simply allow you to switch between frames. Also under the top menu there is a seekbar
        that allows rapid navigation, and frame counter on the right of it.</string>
    <string name="frames3">Pressing New frame button you can add frames to your animation. Notice that new frames will appear right after the current frame, 
        and will contain all the objects from the current frame you have drawn so far.</string>
    <string name="frames4">Pressing Delete button you can remove recently drawn primitives, or, if there are no recently drawn primitives, current frame will be removed. Object is thought to be 
        recently drawn, if frames were not switched since it was drawn and application was not restarted. Notice, that if you have only one frame, removing it is equivalent to
        clearing the frame, yet it will be still present (animation can\'t have less than one frame).</string>
     <string name="animation1">To play animation you have created, push Play button in top menu.</string>
     <string name="animation2">To stop playing animation, push the same button (it has become red after playing had started).</string>
     <string name="animation3">You can change animation speed in settings choosing animation frames per second (FPS). 
         Settings are available from the bottom menu.</string>
     <string name="animation4">Notice that you can\'t draw or move objects while watching animation.</string>
     <string name="save1">To save or load animation, go to bottom menu and select appropriate item.</string>
     <string-array name="languages_array">
        <item>English</item>
        <item>Русский</item>
    </string-array>
</resources>