<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <group android:id="@+id/group2" android:menuCategory="container">
     <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings_menu"
        android:title="@string/action_settings"/>
	
	 <item 
            android:id="@+id/action_help" 
            android:icon="@drawable/help_menu"
            android:title="@string/str_help">
        </item>
	</group>
   
    <group android:id="@+id/group1" android:menuCategory="container">
        <item
	    	android:id="@+id/action_new_animation"
        	android:icon="@drawable/new_anim"
        	android:title="@string/str_new_anim"/>
        <item 
            android:id="@+id/action_save" 
            android:icon="@drawable/save_menu"
            android:title="@string/str_save" />
        <item 
            android:id="@+id/action_load" 
            android:icon="@drawable/load_menu"
            android:title="@string/str_load">
        </item>

    </group>
   
</menu>
