<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
    
<RelativeLayout
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/label_back"
        android:gravity="center"
        android:text="@string/ans3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/label_color" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:src="@drawable/hand" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView6"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/imageView6"
        android:text="@string/move1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/label_color" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView6"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="19dp"
        android:text="@string/move2"
        android:textColor="@color/label_color" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="5dp"
        android:text="@string/move3"
        android:textColor="@color/label_color" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:src="@drawable/stick_move" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="5dp"
        android:text="@string/move4"
        android:textColor="@color/label_color" />
    
<TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/move5"
        android:textColor="@color/label_color" />

<ImageView
    android:id="@+id/imageView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
     android:layout_below="@+id/textView7"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="5dp"
    android:src="@drawable/circle_scale" />

<ImageView
    android:id="@+id/imageView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/imageView3"
    android:layout_below="@+id/textView5"
    android:layout_marginTop="5dp"
    android:src="@drawable/circle_rotate" />

<TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/move6"
        android:textColor="@color/label_color" />

<ImageView
    android:id="@+id/imageView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="5dp"
    android:layout_below="@+id/textView8"
    android:src="@drawable/drop1" />

<ImageView
    android:id="@+id/imageView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_marginRight="5dp"
    android:layout_below="@+id/textView8"
    android:src="@drawable/drop2" />

</RelativeLayout>
</ScrollView>
